--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="info">Ma\'lumotlar</string>
     <string name="requirements">Talablar</string>
     <string name="submit_cv">Rezyume yuborish</string>
+    <string name="registration_text"><u>Registratsiyadan o'tish</u></string>
 </resources>
